--- a/.gitignore
+++ b/.gitignore
@@ -58,8 +58,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
+
 
 # Flask stuff:
 instance/
@@ -128,5 +127,38 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Carpeta de versión anterior
-Urbania-Version1/
+# Django specific
+media/
+staticfiles/
+static/
+
+# PostgreSQL
+*.sql
+
+# Redis dump file
+dump.rdb
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Node.js (if using frontend tools)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+*.tmp
